--- a/Matching-Images-Game/Matching-Images-Game.csproj
+++ b/Matching-Images-Game/Matching-Images-Game.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DataTypes\IResultSaver.cs" />
     <Compile Include="DataTypes\Result.cs" />
     <Compile Include="GameWindow.xaml.cs">
       <DependentUpon>GameWindow.xaml</DependentUpon>
